Java 11 Compatibility
Full Java 11 compatibility (minus the need for a command line flag specified by the user) along with Java 8 backwards-compatibility.
Test with test mods only, not play tested as of this commit.
Several reflections were found to be pointless and removed to smooth the compatibility.